[package]
name = "raspos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
lock_api = { version = "0.4.5", features = ["nightly"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tock-registers = "0.7.0"
cortex-a = "6.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9"

# profiles are configured in .cargo/config.toml
