[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
libcore = { path = "../libcore" }
log = "0.4.14"

[target.'cfg(target_arch = "aarch64")'.dependencies]
tock-registers = "0.7.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = { version = "0.2.15", optional = true }
x86_64 = { version = "0.14.7" }

[features]
qemu = ["uart_16550"]
