[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
arch = { path = "../arch" }
libcore = { path = "../libcore" }
log = "0.4.14"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9"

[dev-dependencies]
x86_64 = "0.14.7"

[features]
default = ["qemu"]
qemu = ["arch/qemu"]
